housekeeping: use Java 19 as baseline + update of libraries